--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Django==4.1.4
 django-filter==22.1
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
-djangorestframework-simplejwt==5.2.2
+djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-nested-routers==0.93.4
 idna==3.4
@@ -20,6 +20,7 @@ Jinja2==3.1.2
 MarkupSafe==2.1.1
 mysqlclient==2.1.1
 oauthlib==3.2.2
+Pillow==9.3.0
 pycodestyle==2.10.0
 pycparser==2.21
 PyJWT==2.6.0
@@ -31,5 +32,6 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.3
+tomli==2.0.1
 uritemplate==4.1.1
 urllib3==1.26.13
